# pybind11-Scene-Text-Image-Transformation

./: CMakeLists.txt  README.md  build.sh  install-boost.sh  install-opencv.sh  play.py  test_pybind11.py
include/: AugmentPybind11.h  pybind11_opencv.h
src/: AugmentPybind11.cpp  imgwarp_mls.cpp  imgwarp_mls_rigid.cpp
